rackspace/apps/meeting-tools/local/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meeting-tools-dev
spec:
  entryPoints:
    - web # TODO: switch this to websecure when appropriate
  routes:
    - kind: Rule
      match: Host(`dev.meeting_tools.marquescg.com`) # TODO: find associated host domain for frontend
      priority: 10
      services:
        - name: dev-frontend-service
          port: 3000
    - kind: Rule
      match: Host(`dev.meeting_tools.marquescg.com/api`) # TODO: find associated host domain for frontend
      priority: 10
      services:
        - name: dev-backend-service
          port: 8000
